2002-05-11  Bruno Haible  <bruno@clisp.org>

	* autopoint.texi: Recommend AM_GNU_GETTEXT_VERSION(..) syntax.
	* gettext.texi (AM_GNU_GETTEXT_VERSION): New subsection.

2002-05-08  Bruno Haible  <bruno@clisp.org>

	* matrix.texi: Update.
	* nls.texi (STATUS): Likewise.

2002-05-01  Bruno Haible  <bruno@clisp.org>

	* gettextize.texi: New file, mostly extracted from gettext.texi.
	* autopoint.texi: New file.
	* gettext.texi (gettextize Invocation): Move to gettextize.texi.
	(CVS Issues): New section.
	* Makefile.am (gettext_TEXINFOS): Add gettextize.texi, autopoint.texi.

2002-04-28  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (gettextize Invocation): Document option --dry-run.

2002-04-28  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (mkinstalldirs, config.h.in): New subsections.
	(src/Makefile): Mention the call to textdomain().

2002-04-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.2 released.

2002-04-23  Bruno Haible  <bruno@clisp.org>

	* msg*.texi, xgettext.texi: Document option --no-wrap.

2002-04-22  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Preparing Strings): New section.
	(po/POTFILES.in): Mention how to handle generated files.

2002-04-10  Bruno Haible  <bruno@clisp.org>

	* ISO_639: Update. Add id, wa. Change jw to jv.

2002-04-04  Bruno Haible  <bruno@clisp.org>

	* matrix.texi: Update.
	* nls.texi (STATUS): Likewise.

2002-03-12  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.1 released.

2002-03-07  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.texi: Mention languages Python, Lisp, EmacsLisp, librep,
	awk, Tcl, RST, Glade.
	* msgfmt.texi: Mention Tcl mode.
	* msgunfmt.texi: Likewise.

2002-03-05  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (Files You Must Create or Alter): Mention how things
	work when automake is used.

2002-03-04  Bruno Haible  <haible@clisp.cons.org>

	* matrix.texi: Update.
	* nls.texi (STATUS): Likewise.

2002-03-03  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Tcl): New node.
