@@ -1,3 +1,10 @@
+2002-05-12  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (Header Entry): Add ISO-8859-14, KOI8-T, GEORGIAN-PS to
+	the list of allowed encodings. Mention the languages Breton,
+	Cornish, Danish, Manx, Occitan, Tagalog, Uzbek, Walloon, Bosnian,
+	Maori, Welsh, Tajik, Georgian.
+
 2002-05-11  Bruno Haible  <bruno@clisp.org>
 
 	* autopoint.texi: Recommend AM_GNU_GETTEXT_VERSION(..) syntax.
